Fixed headers that had a weird overflow into the hamburger nav. Updated progress page, but haven't changed bars yet

--- a/scss/highfidelity/cart.scss
+++ b/scss/highfidelity/cart.scss
@@ -19,10 +19,9 @@ h1,h2 {
     text-align: center;
     background-color: $yellow;
     padding: 0.3em;
-    margin:0;
     font-family: $heading;
-    width:130%;
-    margin-left:-15%;
+    width:110%;
+    margin:0 0 1em -2.6%;
 }
 
 .time-title {
@@ -31,9 +30,9 @@ h1,h2 {
     background-color: $blue;
     color:#fff;
     padding: 0;
-    width:130%;
-    margin-left:-15%;
-    padding-left:20%;
+    width:110%;
+    margin:0 0 1em -2.6%;
+    padding-left:5%;
     font-family: $heading;
 }
 
@@ -43,9 +42,9 @@ h1,h2 {
     background-color:$teal;
     color:#fff;
     padding: 0;
-    width:130%;
-    margin-left:-15%;
-    padding-left:20%;
+    width:110%;
+    margin:0 0 1em -2.6%;
+    padding-left:5%;
     font-family: $heading;
 }
 
@@ -72,7 +71,7 @@ h1,h2 {
 
 .confirm {
   background-color: #39cbaf;
-  padding: 5px;
+  padding: 10px;
   color: #fff;
   font-family: 'Sun';
   font-size: 2em;
